# MicroCoreOS

./: .env  .env.example  .gitignore  AGENTS.md  AI_CONTEXT.md  AI_PROMPT_TEMPLATES.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  INSTRUCTIONS_FOR_AI.md  LICENSE  README.md  ROADMAP.md  database.db  env_test.txt  main.py  pyproject.toml  verify_cookies.py
.agent/workflows/: feature-plan.md  multi-domain-plan.md  new-domain.md  new-tool.md
.github/workflows/: ci.yml
.jules/: sentinel.md
benchmarks/: README.md  benchmark.py
core/: base_plugin.py  base_tool.py  container.py  context.py  kernel.py  registry.py
dev_infra/: cache_probe.py  docker-compose.yml
docs/: CORE_INFRASTRUCTURE.md  ELASTIC_DEPLOYMENT.md  EVENT_BUS.md  HTTP_SERVER.md  INDEX.md  OBSERVABILITY.md  OBSERVABILITY_API.md  PARALLEL_DEVELOPMENT.md  PLAN_EVENT_LINTER.md
domains/ping/: __init__.py
plans/: PILOT.md  README.md  active_plan.md  active_plan.yaml  executor_rules.md
tests/: test_arch_linter_drift.py  test_auth_tool.py  test_auto_retry.py  test_chaos_control.py  test_chaos_tool.py  test_config_tool.py  test_core.py  test_create_user.py  test_durable_one_shots.py  test_event_bus_groups.py  test_event_bus_tool.py  test_event_contract_linter.py  test_event_schemas_plugin.py  test_http_params_hardening.py  test_http_server_tool.py  test_kernel.py  test_logger_tool.py  test_no_retry.py  test_plan_validator.py  test_postgresql_tool.py  test_registry_collisions.py  test_roles.py  test_s3_tool.py  test_scheduler_singleton.py  test_scheduler_tool.py  test_security_hardening.py  test_sqlite_concurrency.py  test_sqlite_migrations.py  test_sqlite_tool.py  test_state_tool.py  test_system_events_stats.py  test_system_traces_plugin.py  test_tool_proxy.py  test_trace_chain_helper.py
tools/: auth_tool.py  config_tool.py  context_tool.py  event_bus_tool.py  http_server_tool.py  logger_tool.py  sqlite_tool.py
(+123 files in other folders)
