[project]
name = "microos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==3.2.2",
    "fastapi>=0.128.0",
    "flask>=3.1.2",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
